# Lumina

./: .gitignore  AI功能测试指南.md  AI功能集成说明.md  AI测试使用指南.md  AUDIO_RECORDING_GUIDE.md  CHANGELOG.md  DEBUG_SUMMARY.md  DEVELOPMENT_LOG.md  ERROR_RECOGNIZER_BUSY修复报告.md  FEATURES.md  MICROPHONE_CHECKLIST.md  README.md  README_IMPLEMENTATION.md  UI美化说明.md  VOICE_DEBUG_GUIDE.md  WINDOWS_MIGRATION.md  WINDOWS_SETUP.md  WINDOWS_部署指南.md  build.gradle  check_microphone.sh  debug.keystore  diagnose.sh  gradle.properties  requirements.txt  settings.gradle  verify_windows.ps1  功能完成总结.md  快捷命令测试指南.md  意图  极简识别测试指南.md  诊断报告.md  语音命令完整文档.md  语音识别使用指南.md  语音识别问题分析.md  调试完成报告.md  连续监听修复报告.md  集成完成总结.md  麦克风问题解决方案.md
.trae/rules/: project_rules.md
Data collection and pre-processing/: dep.sln  dep.vcxproj  dep.vcxproj.filters
Data collection and pre-processing/include/: macros.h  (+1 more)
OpenSight_Core/: DEPLOY_MOBILE.md  androidval.py  api.py  blind_assist_module.py  blind_navigator.py  detect.py  dottest.py  export.py  export2.py  export_for_mobile.py  lidar_resnet18.py  readme.md  rezise.py  train.py  train1.py  val.py  valmap.py  voc_label1.py  yolo_fusion_v2.py
RL for adaptive video compression/: creat_MDPDataset.py  creat_MDPDataset_cerebellar _reward.py  eval_discreteSAC.py  read_DSAC_model.py  requirements.txt.bak  save_DSAC_onnx_model.py  train_RL.py  train_cerebellar_RL.py
Smartphone deployment/: settings.gradle
app/: build.gradle  build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  image_processing.cpp
docs/: AGENT_TRANSFORMATION_MANUAL.md
gradle/: libs.versions.toml
(+165 files in other folders)
